--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@use-gesture/react": "^10.2.26",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
+    "lodash.clamp": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
+    "@types/lodash.clamp": "^4.0.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
