--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
+    "keycloak-js": "^26.2.1",
     "lodash.clamp": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
