--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@use-gesture/react": "^10.2.26",
     "axios": "^1.3.4",
+    "dexie": "^4.2.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
     "keycloak-js": "^26.2.1",
