--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vite-plugin-pwa": "^0.14.6"
+    "vite-plugin-pwa": "^0.14.6",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
