--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@use-gesture/react": "^10.2.26",
@@ -24,10 +25,13 @@
     "lodash.clamp": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.67.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^11.0.5",
     "react-use-measure": "^2.1.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/lodash.clamp": "^4.0.7",
