--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "fake-server": "json-server --watch json-server/data.json --port 4000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -15,18 +14,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@react-spring/web": "^9.7.2",
-    "@reduxjs/toolkit": "^1.8.3",
     "@use-gesture/react": "^10.2.26",
     "axios": "^1.3.4",
     "dexie": "^4.2.1",
-    "formik": "^2.2.9",
-    "json-server": "^0.17.3",
     "keycloak-js": "^26.2.1",
     "lodash.clamp": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^11.0.5",
     "react-use-measure": "^2.1.1",
